--- a/views/index.pug
+++ b/views/index.pug
@@ -12,7 +12,7 @@ block content
   div#sign-up
     h1 Sign Up
     +validationErrorSummary(errors)
-    form(action='/user/signup' method='post')
+    form(action='/users/signup' method='post')
       input(type='hidden' name='_csrf' value=csrfToken)
       +field('Username', 'username', user.username)
       +field('Email Address', 'emailAddress', user.emailAddress)
@@ -23,7 +23,7 @@ block content
   div#login
     h1 Login
     +validationErrorSummary(errors)
-    form(action='/user/login' method='post')
+    form(action='/users/login' method='post')
       input(type='hidden' name='_csrf' value=csrfToken)
       +field('Username', 'username', user.username)
       +field('Password', 'password', user.password, 'password')
