--- a/views/index.pug
+++ b/views/index.pug
@@ -15,7 +15,7 @@ block content
     form(action='/users/signup' method='post')
       input(type='hidden' name='_csrf' value=csrfToken)
       +field('Username', 'username', user.username)
-      +field('Email Address', 'emailAddress', user.emailAddress)
+      +field('Email Address', 'email', user.email)
       +field('Password', 'password', user.password, 'password')
       +field('Confirm Password', 'confirmPassword', '', 'password')
       div
