--- a/views/sign-up.pug
+++ b/views/sign-up.pug
@@ -9,14 +9,16 @@ append head
   script(src="/javascripts/index.js" type="module" defer)
 
 block content
-  div#login
-    h1 Login
+  div#sign-up
+    h1 Sign Up
     +validationErrorSummary(errors)
-    form(action='/users/login' method='post')
+    form(action='/users/signup' method='post')
       input(type='hidden' name='_csrf' value=csrfToken)
       +field('Username', 'username', user.username)
+      +field('Email Address', 'email', user.email)
       +field('Password', 'password', user.password, 'password')
+      +field('Confirm Password', 'confirmPassword', '', 'password')
       div
-        button(type='submit') Login
+        button(type='submit') Register
       div
-        p: a(href='/users/signup') Don't have an account?
+        p: a(href='/') Have an account already?
