--- a/views/index.pug
+++ b/views/index.pug
@@ -15,7 +15,7 @@ block content
     form(action='/users/login' method='post')
       input(type='hidden' name='_csrf' value=csrfToken)
       +field('Username', 'username', user.username)
-      +field('Password', 'password', user.password, 'password')
+      +field('Password', 'password', '', 'password')
       div
         button(type='submit') Login
       div
