populated the questions feed with the db and set up the pug files for questions

--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -25,3 +25,11 @@ body, header, nav {
 h1 {
   font-size: 2rem;
 }
+
+#question-box{
+  display:inline;
+  border: solid 1px grey;
+  width: 100px;
+  height: 100px;
+
+}
