--- a/views/questionFeed.pug
+++ b/views/questionFeed.pug
@@ -3,6 +3,10 @@ include utils
 block content
   each question in questions
     div#question-box
-      h1= question.title
+      h3= question.User.username
+      h2= question.title
       span= question.Category.category
       p= question.content
+      if userId === question.User.id
+        button(type="submit") Edit
+        button(type="submit") Delete
