--- a/views/singleQuestion.pug
+++ b/views/singleQuestion.pug
@@ -10,7 +10,7 @@ block content
         button(type="submit") Edit
         button(type="submit") Delete
     div#answer-box
-      form(action=`/questions/1` method='post')
+      form(action=`/questions/${question.id}` method='post')
        input(type='hidden' name='_csrf' value=csrfToken)
        textarea(name='content' value=content)
        button(type='submit') Add Answer
