--- a/views/singleQuestion.pug
+++ b/views/singleQuestion.pug
@@ -1,6 +1,7 @@
 extends layout
 include utils
 block content
+    +validationErrorSummary(errors)
     div#question-box
       h3= question.User.username
       h2= question.title
@@ -18,8 +19,7 @@ block content
       div.answer-feed
        h3= answer.User.username
        span= answer.content
+       a(href=`/answers/${answer.id}`) Comments
        if userId === answer.User.id
         button(type="submit") Edit
         button(type="submit") Delete
-
-      
