--- a/views/utils.pug
+++ b/views/utils.pug
@@ -7,7 +7,7 @@ mixin validationErrorSummary(errors)
         each error in errors
           li= error
 
-mixin field(labelText, fieldName, fieldValue, fieldType = 'text', placeholder = null)
+mixin field(labelText, fieldName, fieldValue, fieldType = 'text')
   div
     label(for=fieldName)= labelText
     if fieldType === 'textarea'
