working on delete button, form for delete works. DOM manipulation for delete has bug

--- a/views/questionFeed.pug
+++ b/views/questionFeed.pug
@@ -2,12 +2,14 @@ extends layout
 include utils
 block content
     each question in questions
-      div#question-box
-        h3= question.User.username
+      div(id=`question-container-${question.id}`).question-container
         a(href=`/questions/${question.id}`)= question.title
       div
         span= question.Category.category
         p= question.content
         if userId === question.User.id
-          button(type="submit") Edit
-          button(type="submit") Delete
+          button(type="submit").delete-btn Delete
+          //- form(action=`/questions/${question.id}/delete` method="post")
+          //-   input(type="hidden" name="_csrf" value=csrfToken)
+          //-   button(id=`delete-${question.id}`).delete-btn Delete Question
+            //- button(type="submit") Edit
