polished up CSS for logoin logout

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -2,6 +2,10 @@ h1 {
     color: #555555;
 }
 
+*{
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 body {
     background: rgb(255,0,220);
     background: linear-gradient(194deg, rgba(255,0,220,1) 43%, rgba(0,212,255,1) 91%);
@@ -10,24 +14,24 @@ body {
     min-height: 100vh;
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 form{
     width: 100%;
-    padding: 10px 15px;
-    margin: 5px 0;
     box-sizing: border-box;
+    line-height: 10px;
 }
 
 input {
-    background: #0000000a;
     box-sizing: border-box;
     border-radius: 20px;
-    color: #eee;
+    color: rgba(0, 0, 0, 0.6);
     font-size: 18px;
     height: 100%;
-    padding: 4px 20px 0;
+    padding: 10px 15px;
     width: 100%;
+    border: 2px solid #D5D5D5;
   }
 
 #splash{
@@ -36,7 +40,7 @@ input {
     flex-direction: column;
     justify-content: center;
     width: 428px;
-    height: 613px;
+    height: fit-content;
     left: 118px;
     top: 205px;
     padding: 50px;
