--- a/views/utils.pug
+++ b/views/utils.pug
@@ -1,8 +1,8 @@
 
 mixin validationErrorSummary(errors)
   if errors
-    div
-      p The following error(s) occurred:
+    div#errors
+      //- p The following error(s) occurred:
       ul
         each error in errors
           li= error
