working on nav bar

--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -4,15 +4,28 @@ body {
 }
 
 a {
-  color: #00B7FF;
+  color: #00b7ff;
 }
 
 * {
   box-sizing: border-box;
 }
 
-h1, h2, h3, h4, h5, h6, a, ol, li, ul, div, span,
-body, header, nav {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+a,
+ol,
+li,
+ul,
+div,
+span,
+body,
+header,
+nav {
   font-size: 1rem;
   color: inherit;
   background-color: transparent;
@@ -26,10 +39,34 @@ h1 {
   font-size: 2rem;
 }
 
-#question-box{
-  display:inline;
+#question-box {
+  display: inline;
   border: solid 1px grey;
   width: 100px;
   height: 100px;
+}
 
+header {
+  background-color: rgb(65, 188, 225);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 10%;
+}
+
+header img {
+  height: 30%;
+  width: 30%;
+}
+
+nav a {
+  list-style: none;
+  display: inline-block;
+  padding: 0px 20px;
+}
+
+nav li {
+  list-style: none;
+  display: inline-block;
+  padding: 0px 20px;
 }
