--- a/views/navBar.pug
+++ b/views/navBar.pug
@@ -1,9 +1,9 @@
 header
-    img(src='https://i.imgur.com/22BqSWG.png')
     nav
         ul
-            li
-                a(href='/questions') Home
+            li: a(href='/questions')
+                //- img(src='https://i.imgur.com/22BqSWG.png')
+                button#logo
             li: a(href='/questions/new') Add Question
             li: a(href='/users/logout') Logout
             li: div
