questions form being worked on and nav fixed

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -5,6 +5,7 @@ html
         title="Express Starter App"
         link(rel='stylesheet' href='/stylesheets/reset.css')
         script(src='/javascripts/index.js' type='module')
-  body
+  header
       include navBar
+  body
       block content
