--- a/views/navBar.pug
+++ b/views/navBar.pug
@@ -1,12 +1,10 @@
-header
-    nav
-        ul
-            li: a(href='/questions')
-                //- img(src='https://i.imgur.com/22BqSWG.png')
-                button#logo
-            li: a(href='/questions/new') Add Question
-            li: a(href='/users/logout') Logout
-            li: div
-                form(action='' method='post')
-                    input(type="text" placeholder="Search..." name="search")
-                    button(type="submit") Search
+nav
+    ul
+        li: a#logo(href='/questions') ASKMOMDAD
+            //- img(src='https://i.imgur.com/22BqSWG.png')
+        li: a(href='/questions/new') Add Question
+        li: a(href='/users/logout') Logout
+        li: div
+            form(action='' method='post')
+                input(type="text" placeholder="Search..." name="search")
+                button(class="searchbutton" type="submit") Search
