New questions page done and navbar fixed #posts in the works

--- a/views/questionFeed.pug
+++ b/views/questionFeed.pug
@@ -2,7 +2,7 @@ extends layout
 include utils
 block content
     each question in questions
-      div(id=`question-container-${question.id}`)
+      div.post(id=`question-container-${question.id}`)
         a(href=`/questions/${question.id}`)= question.title
         div
           span= question.Category.category
