--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -6,6 +6,8 @@ body {
   /* min-height: 100vh; */
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 a {
@@ -114,6 +116,11 @@ form {
   background-color: white;
 }
 
+textarea {
+  background-color: white;
+  width: 300px;
+}
+
 input {
   box-sizing: border-box;
   border-radius: 50px;
@@ -125,18 +132,50 @@ input {
   background-color: white;
 }
 
-#post{
+select {
+  background-color: white;
+  box-sizing: border-box;
+  border-radius: 50px;
+  color: rgba(0, 0, 0, 0.6);
+  font-size: 14px;
+  padding: 5px 25px;
+  border: none;
+  border: 2px solid #d5d5d5;
+  background-color: white;
+}
+
+.forminput{
+  padding: 10px;
+}
+
+.forminput button {
+  border: 1px;
+  color: white;
+  background-color: #00b7ff;
+  border-radius: 35px;
+  width: 120px;
+  height: auto;
+  margin: 10px;
+  padding: 10px;
+  font-size: 14px;
+}
+
+label {
+  background-color: white;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.post{
   display: flex;
-  align-items: center;
-  flex-direction: column;
+  align-content: center;
   justify-content: center;
-  width: 428px;
-  height: fit-content;
+  width: fit-content;
+  /* height: fit-content; */
 
   padding: 50px;
   margin: 50px;
 
   background: #ffffff;
   box-sizing: border-box;
-  border-radius: 30px;
+  border-radius: 10px;
 }
