--- a/views/newQuestion.pug
+++ b/views/newQuestion.pug
@@ -3,20 +3,27 @@ extends layout
 include utils.pug
 
 block content
-  div#post
+  div.post
     div#new-question
       h1 Post a Question
+      br
       form(action='/questions/new' method='post')
         input(type='hidden' name='_csrf' value=csrfToken)
-        label(for="category") Category
-        select(name="category" required)
-          each category in categories
-            option(value= category.id)=category.category
-        br
-        label(for='title') Post Question
-        input(type='text' name='title' value=title required)
-        br
-        label(for='content') Content
-        textarea(name='content' value=content)
-        br
-        button(type="submit") Submit
+        div.forminput
+          label(for="category") Category
+          select(name="category" required)
+            each category in categories
+              option(value= category.id)=category.category
+          br
+        div.forminput
+          label(for='title')
+          br
+          textarea(name='title' value=title required, placeholder='Start your question with "What", "How", "Why", etc.')
+          br
+        div.forminput
+          label(for='content')
+          br
+          textarea(name='content' value=content, placeholder="More info here...")
+          br
+        div.forminput
+          button(type="submit") Submit
