--- a/views/navBar.pug
+++ b/views/navBar.pug
@@ -1,6 +1,6 @@
 nav
     ul
-        li: a#logo(href='/questions') ASKMOMDAD
+        li: a#logo(href='/questions') ASKMOM&DAD
             //- img(src='https://i.imgur.com/22BqSWG.png')
         li: a(href='/questions/new') Add Question
         li: a(href='/users/logout') Logout
