--- a/views/navBar.pug
+++ b/views/navBar.pug
@@ -3,8 +3,14 @@ nav
         li: a#logo(href='/questions') ASKMOMDAD
             //- img(src='https://i.imgur.com/22BqSWG.png')
         li: a(href='/questions/new') Add Question
-        li: a(href='/users/logout') Logout
         li: div
             form(action='' method='post')
                 input(type="text" placeholder="Search..." name="search")
                 button(class="searchbutton" type="submit") Search
+        li
+            if locals.authenticated
+            span Welcome #{user.username}!
+        li
+            form(action='/users/logout' method='post')
+                button.logoutButton(type='submit') Logout
+        //- li: a(href='/users/logout') Logout
