--- a/views/questionFeed.pug
+++ b/views/questionFeed.pug
@@ -4,14 +4,17 @@ block content
     each question in questions
       div.post(id=`question-container-${question.id}`)
         a(href=`/questions/${question.id}`)= question.title
-        div
+        div.category
           span= question.Category.category
+        br
+        div.line
+        div.content
           p= question.content
           if userId === question.User.id
             button(id=`question-delete-${question.id}` type="submit").delete-btn Delete
             form(action=`/questions/${question.id}/edit` method='get')
-             input(type='hidden' name='_csrf' value=csrfToken)
-             button(id=`question-edit-${question.id}` type="submit").edit-btn Edit
+            input(type='hidden' name='_csrf' value=csrfToken)
+            button(id=`question-edit-${question.id}` type="submit").edit-btn Edit
           //- form(action=`/questions/${question.id}/delete` method="post")
           //-   input(type="hidden" name="_csrf" value=csrfToken)
           //-   button(id=`delete-${question.id}`).delete-btn Delete Question
