--- a/views/questionFeed.pug
+++ b/views/questionFeed.pug
@@ -3,15 +3,18 @@ include utils
 block content
     each question in questions
       div.post(id=`question-container-${question.id}`)
-        a(href=`/questions/${question.id}`)= question.title
-        div
-          span= question.Category.category
-          p= question.content
-          if userId === question.User.id
-            button(id=`question-delete-${question.id}` type="submit").delete-btn Delete
-            form(action=`/questions/${question.id}/edit` method='get')
-             input(type='hidden' name='_csrf' value=csrfToken)
-             button(id=`question-edit-${question.id}` type="submit").edit-btn Edit
-          //- form(action=`/questions/${question.id}/delete` method="post")
-          //-   input(type="hidden" name="_csrf" value=csrfToken)
-          //-   button(id=`delete-${question.id}`).delete-btn Delete Question
+        span= question.User.username
+         div
+          span.cat= question.Category.category
+          a.title(href=`/questions/${question.id}`)= question.title
+          div
+            p.con= question.content
+            div.edit-delete
+              if userId === question.User.id
+                button(id=`question-delete-${question.id}` type="submit").delete-btn Delete
+                form(action=`/questions/${question.id}/edit` method='get')
+                  input(type='hidden' name='_csrf' value=csrfToken)
+                  button(id=`question-edit-${question.id}` type="submit").edit-btn Edit
+              //- form(action=`/questions/${question.id}/delete` method="post")
+              //-   input(type="hidden" name="_csrf" value=csrfToken)
+              //-   button(id=`delete-${question.id}`).delete-btn Delete Question
