--- a/views/newQuestion.pug
+++ b/views/newQuestion.pug
@@ -4,7 +4,7 @@ include utils.pug
 
 block content
  div
-    div.splash
+    div.post
       h1 Post a Question
       br
       form(action='/questions/new' method='post')
